--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher_moon"
+        android:icon="@mipmap/ic_launcher_moon2"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_moon_round"
+        android:roundIcon="@mipmap/ic_launcher_moon2_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
