--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
+    namespace "fr.husta.android.dark_theme_tester"
     compileSdkVersion 32
     defaultConfig {
         applicationId "fr.husta.android.dark_theme_tester"
